[gd_scene load_steps=5 format=3 uid="uid://eugnypvibwq6"]

[ext_resource type="Script" path="res://characters/enemy.gd" id="1_56ok6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k0phg"]
radius = 244.283

[sub_resource type="CircleShape2D" id="CircleShape2D_xf746"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fook8"]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_56ok6")
moveSpeed = 100.0

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="chaseArea" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/chaseArea"]
shape = SubResource("CircleShape2D_k0phg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xf746")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="stateTimer" type="Timer" parent="."]

[node name="enterBattle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enterBattle"]
shape = SubResource("CircleShape2D_fook8")

[connection signal="body_entered" from="Sprite2D/chaseArea" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="Sprite2D/chaseArea" to="." method="_on_chase_area_body_exited"]
[connection signal="timeout" from="stateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="body_entered" from="enterBattle" to="." method="_on_enter_battle_body_entered"]
[connection signal="body_exited" from="enterBattle" to="." method="_on_enter_battle_body_exited"]
